--- a/dl.cfg
+++ b/dl.cfg
@@ -1,4 +1,4 @@
 [AWS]
-AWS_ACCESS_KEY_ID = AKIASPJPAPVZNSYL2TU4
-AWS_SECRET_ACCESS_KEY = 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
+AWS_ACCESS_KEY_ID = ''
+AWS_SECRET_ACCESS_KEY = ''
 BUCKET = immigrationanalytics
